--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,7 @@ nav ul li {
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 40px;
     font-weight: bold;
+    font-size: 15px;
   }
   .volver a {
     display: -webkit-box;
