--- a/SASS/_home.scss
+++ b/SASS/_home.scss
@@ -108,6 +108,11 @@ ul li a {
        
     }
 
+    .pie {
+        display: flex;
+        justify-content: space-between;
+    }
+
 }
 
  @media screen and (min-width: 768px) {
@@ -180,6 +185,11 @@ ul li a {
     ul li a {
         font-size: 20px;
         color: white;
+    }
+
+    .pie {
+        display: flex;
+        justify-content: space-between;
     }
  }
     
