--- a/SASS/_2008.scss
+++ b/SASS/_2008.scss
@@ -34,7 +34,7 @@
   }
   
   .p208 {
-      background-color:lightblue;
+      background-color: $bc;
   }
   
     .escape {
@@ -59,7 +59,7 @@
       }
   
      .emage img {
-         width: 100%;
+         width: $ancho + 50%;
         
   }
   
