--- a/SASS/_videosymas.scss
+++ b/SASS/_videosymas.scss
@@ -35,7 +35,7 @@
 .volver a {
     display: flex;
     justify-content: center;
-    color: white;
+    color: $colora;
 }
 
 .volver {
@@ -73,7 +73,7 @@
    .hdi video {
        display: flex;
        justify-content: center;
-       width: 100%;
+       width: $ancho + 50%;
     
    }
    .rueda h4 {
